@@ -31,7 +31,11 @@ void
 test01()
 {
   for (const path& p : __gnu_test::test_paths)
-    VERIFY( absolute(p).is_absolute() );
+  {
+    std::error_code ec;
+    path abs = absolute(p, ec);
+    VERIFY( ec || abs.is_absolute() );
+  }
 }
 
 void
